20240808, v0.9 1. 將歷史任務頁面的scrollBar顯示出來。 2. 多印一些 ElevatorSocketBox 的 log ，以便於 debug，疑似 Socket 未正確斷開連線。 3. 任務開始前檢查電梯控制器，修復一些 bug 。
待處理
1. B1 電梯控制器

--- a/src/main/resources/static/css/history.css
+++ b/src/main/resources/static/css/history.css
@@ -3,9 +3,6 @@
     src: url("US101.TTF");
     font-weight: bold;
 }
-::-webkit-scrollbar {
-    display: none;
-}
 .Title{
     margin-left: 1em;
     padding-left: 0px;
